--- a/exercises/building-a-button/styles.css
+++ b/exercises/building-a-button/styles.css
@@ -44,67 +44,52 @@ body {
     transition: transform 0.5s;
 }
 
-.launch-button .rocket i {
+.launch-button .rocket i{
     position: absolute;
     top: 0;
     left: 0;
 }
-
-.launch-button:hover .rocket {
-    transform: scale(1.3);
-}
-
-.launch-button .fa-rocket {
+.launch-button .fa-rocket{
     transform: translate(-50%, -50%) rotate(-45deg);
 }
-
-.launch-button .fa-burn {
-    transform: translate(-50%, -15%) rotate(180deg) scale(0.3);   
+.launch-button .fa-burn{
+    transform: translate(-50%, -15%) rotate(180deg) scale(0.1);
     color: orange;
-    scale: 0.1;
     transition: transform 0.4s;
 }
-
-.launch-button:hover .fa-burn {
+.launch-button:hover .fa-burn{
     transform: translate(-50%, -15%) rotate(180deg) scale(0.4);
 }
-
-.launch-button:active .fa-burn {
+.launch-button:active .fa-burn{
     transform: translate(-50%, 25%) rotate(180deg) scale(0.8);
 }
-
-.launch-button:hover .rocket {
+.launch-button:hover .rocket{
     transform: scale(1.3);
 }
-
-.launch-button:active .rocket {
+.launch-button:active .rocket{
     transform: rotate(-15deg) translate(60px, -140px) scale(3.5);
 }
-
-.label {
+.launch-button .label{
     letter-spacing: 0.1em;
-text-transform: uppercase;
-color: white;
-transition: color 0.2s, text-shadow 0.2s;
+    text-transform: uppercase;
+    color: white;
+    transition: color 0.2s, text-shadow 0.2s;
 }
- 
-.label:hover {
+.label:hover{
     color: orange;
-text-shadow: 0 0 3px rgb(251, 255, 0, 0.5);
+    text-shadow: 0 0 3px rgb(251, 255, 0, 0.5);
 }
-
 @keyframes burn {
     from { transform: rotate(-7deg); }
     33% { transform: rotate(4deg); }
     66% { transform: rotate(-4deg); }
     to { transform: rotate(7deg); }
-  }
-
-  .launch-button:active .fa-burn::before {
+}
+.launch-button:active .fa-burn::before{
     display: block;
     transform-origin: center bottom;
     animation-name: burn;
-    animation-duration: 0.1s;
+    animation-duration: 0.1s; 
     animation-iteration-count: infinite;
     animation-direction: alternate;
-  }
+}
